@startuml
title Package di Analisi: Attività - Smart Home System

package "Gestione Attività" as PktAttivita <<Dominio>> {
  class Utente {
    + id: str
    + nome: str
    + email: str
    + password_hash: str
    + autentica(password: str): bool
    + cambia_password(nuova_password: str): void
  }

  class Amministratore {
    + livello_accesso: int
    + gestisci_automazione(automazione: Automazione): void
    + consulta_log(eventi: list): list
    + crea_utente(utente: Utente): bool
    + elimina_utente(id_utente: str): bool
  }

  class Stanza {
    + id: str
    + nome: str
    + piano: int
    + aggiungi_dispositivo(dispositivo: Dispositivo): void
    + rimuovi_dispositivo(id_dispositivo: str): bool
    + elenca_dispositivi(): list
    + get_dispositivi_per_tipo(tipo: str): list
  }

  class Dispositivo {
    + id: str
    + nome: str
    + tipo: str
    + stato: str
    + online: bool
    + id_stanza: str
    + accendi(): void
    + spegni(): void
    + cambia_stato(nuovo_stato: str): bool
    + invia_comando(comando: str): bool
    + is_online(): bool
    + get_stato(): str
    + get_tipo(): str
    + applica_comando(comando: str): bool
  }

  class Luce {
    + intensita: int
    + colore: str
    + attenua(valore: int): bool
    + cambia_colore(colore: str): bool
  }

  class Termostato {
    + temperatura_target: float
    + modalita: str
    + imposta_temperatura(temp: float): bool
    + cambia_modalita(modalita: str): bool
  }

  class Serratura {
    + modalita_sicurezza: bool
    + blocca(): void
    + sblocca(): bool
    + attiva_sicurezza(): void
    + disattiva_sicurezza(): void
  }

  class Regola {
    + id: str
    + tipo_condizione: str
    + valore_condizione: str
    + azione: str
    + valuta_condizione(): bool
    + esegui_azione(): str
  }

  class Automazione {
    + id: str
    + nome: str
    + id_dispositivo: str
    + attiva: bool
    + orario: str
    + ultima_esecuzione: str
    + attiva_automazione(): void
    + disattiva_automazione(): void
    + aggiungi_regola(regola: Regola): void
    + rimuovi_regola(id_regola: str): bool
    + valuta_regole(): list
    + deve_eseguire(): bool
    + esegui(): bool
  }

  class Evento {
    + id: str
    + timestamp: DateTime
    + tipo: str
    + descrizione: str
    + id_dispositivo: str
    + to_string(): str
    + get_timestamp(): DateTime
    + get_tipo(): str
  }

  class LogEventi {
    + id: str
    + eventi: list
    + aggiungi_evento(evento: Evento): void
    + elimina_evento(id_evento: str): bool
    + filtra_eventi(tipo: str): list
    + get_eventi_per_data(data: str): list
    + esporta_log(): str
  }
}

Utente <|-- Amministratore
Dispositivo <|-- Luce
Dispositivo <|-- Termostato
Dispositivo <|-- Serratura
Stanza "1" o-- "0..*" Dispositivo : contiene
Automazione "1" o-- "1..*" Regola : composta da
Automazione ..> Dispositivo : comanda
LogEventi "1" o-- "0..*" Evento : registra
Amministratore "1" --> "0..*" Automazione : gestisce

@enduml
